--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div id="StickyBar">
             <div id="StickyName">
                 <a href="#">
-                    Martin Gouviaux
+                    <span id="Nom">Martin Gouviaux</span>
                 </a>
             </div>
             <div class="TopBarHam">
