--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         </div>
 
         <div class="cards">
-            <h3>Diplômes et Formations</h3>
+            <h3>Formations</h3>
             <div id="Education">
                 <div class = "Class" id="EPSI">
                     <div class="LeftPartEd">
@@ -292,13 +292,13 @@
                     </div>
                     <div class = "RightPartEd">
                         <div class = "EdTitle">Bachelor IT</div>
-                        <div class = "Description">Etudes spécialisées vers le DevOps</div>
+                        <div class = "Description">préparation d'un MSc Expert Informatique et Système d’Information</div>
                     </div>
                 </div>
                 <div class = "Class" id="UGA">
                     <div class="LeftPartEd">
                         <div class = "Duration">Septembre 2017 - Juillet 2019</div>
-                        <div class = "School">DLST - Université Grenoble Alpes</div>
+                        <div class = "School">Université Grenoble Alpes</div>
                         <div class="logo">
                             <img src="./Images/Logos/UGA.png" alt="">
                         </div>
