--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                         <div class = "Duration">Septembre 2020 - Actuellement</div>
                         <div class = "School">EPSI Grenoble</div>
                         <div class="logo">
-                            <img src="./Images/Logos/EPSI.PNG" alt="">
+                            <img src="./Images/Logos/epsi.png" alt="">
                         </div>
                     </div>
                     <div class = "RightPartEd">
