Titles above portfolio

--- a/index.html
+++ b/index.html
@@ -332,12 +332,14 @@
             <h3>Portfolio</h3>
             <div class = "folioContainer">
                 <div class = "folioItem" id = "Aegis">
-                    <a href="https://github.com/Kadah-Ne/AegisBot" target = "_blank">
+                    <a class="folioLink" href="https://github.com/Kadah-Ne/AegisBot" target = "_blank">
+                        <h2 class="folioTitle">Aegis Bot</h2>
                         <img src="./Images/Portfolio/Aegis.png" alt="">
                     </a>
                 </div>
                 <div class = "folioItem" id = "Derek">
-                    <a href="https://github.com/Kadah-Ne/DerekBot" target="_blank">
+                    <a class="folioLink" href="https://github.com/Kadah-Ne/DerekBot" target="_blank">
+                        <h2 class="folioTitle">Derek Bot</h2>
                         <img src="./Images/Portfolio/Derek.jpg" alt="">
                     </a>
                 </div>
